2006-03-27 [colin]	2.0.0cvs178

	* src/undo.c
		Fix undoing by blocks with spaces

2006-03-27 [colin]	2.0.0cvs177

	* src/textview.c
		Set margin to 3px for headers

2006-03-27 [paul]

	2.1.0-rc2 released

2006-03-27 [wwp]	2.0.0cvs176

	* src/summaryview.c
		don't reset quicksearch when updating the message list.
		Thanks to Colin.

2006-03-26 [wwp]	2.0.0cvs175

	* src/compose.c
		use a unified border width ('other' tab in the compose window,
		patch by Pawel Pekala).


2006-03-26 [wwp]	2.0.0cvs174

	* src/common/quoted-printable.c
	* src/addressbook.c
		fixed some compilation warnings (incl. one reported by Pawel Pekala).

2006-03-26 [colin]	2.0.0cvs173

	* src/quote_fmt_parse.y
		Fix non-UTF8 date formats messing up the whole quote a 
		little bit

2006-03-26 [colin]	2.0.0cvs172

	* src/procheader.c
		Make sure the date is UTF8 valid, or try to make it
		so. IncrediMail is really IncrediStupid.
	* src/compose.c
		Fix possible conversions. 
		

2006-03-26 [colin]	2.0.0cvs171

	* src/matcher.c
		Fix corner cases in body search. This is still a
		hack... It seems impossible to make it good and 
		reasonably fast at the same time.

2006-03-26 [colin]	2.0.0cvs170

	* src/summaryview.c
		I think I killed the twilight zone bug!
		summary_select_node() flushes GTK events in order
		to be able to center the view. But this also 
		flushes keypresses like Ctrl-Alt-U, so this can
		call summary_show from summary_select_node (itself
		called from summary_show, etc.). And the summaryview
		has to be unlocked in this function. So just locking
		while processing GTK events, and bailing if locked, 
		should fix it.
		Fixes bug #927 (SIGSEGV during Update Summary)

2006-03-25 [colin]	2.0.0cvs169

	* src/matcher.c
		Fix search in QP-encoded bodies
		Fix utf-8 searches in bodies encoded in the
		locale's encoding
	* src/common/quoted-printable.c
	* src/common/quoted-printable.h
		Add a decode function that doesn't overwrite
		the original pointer
		

2006-03-24 [colin]	2.0.0cvs168
