@@ -1364,3 +1364,4 @@
 ( cvs diff -u -r 1.395.2.188 -r 1.395.2.189 src/summaryview.c;  ) > 2.0.0cvs176.patchset
 ( cvs diff -u -r 1.96.2.104 -r 1.96.2.105 src/textview.c;  ) > 2.0.0cvs177.patchset
 ( cvs diff -u -r 1.13.2.7 -r 1.13.2.8 src/undo.c;  ) > 2.0.0cvs178.patchset
+( cvs diff -u -r 1.11.2.16 -r 1.11.2.17 src/common/smtp.c;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/common/passcrypt.c;  cvs diff -u -r 1.13.2.8 -r 1.13.2.9 src/undo.c;  ) > 2.0.0cvs179.patchset
